# daily-intelligence-report

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  pyproject.toml  setup.sh
.github/: parse_pr_comments.py
.github/workflows/: ai-pr-review.yml  ci.yml
config/connectors/defaults/: rss.yaml
design/: architecture.md  connector-design.md  development-plan.md  feature-implementation-plan.md  multi-ai-code-review-playbook.md  next-steps.md  repo-layout.md
design/archive/: connector-design-audit.md  connector-design.md  readme.md  secret_management_audit.md
dev_docs/: development_plan.md
infra/: schema.sql
src/: __init__.py  database.py
src/connectors/: __init__.py  base.py  exceptions.py  resilience.py  rss.py
src/connectors/configs/: __init__.py  base.py  rss.py
src/intel/: __init__.py  config_loader.py  config_schema.py  init_db.py  logging_config.py
src/intel/utils/: __init__.py  log.py
src/models/: __init__.py  cluster.py  config.py  embedding.py  post.py  source.py
tests/: test_config_loader.py  test_config_validation.py  test_env_precedence.py  test_settings_env_expansion.py
tests/test_connectors/: __init__.py  test_base_connector.py  test_configs.py  test_exceptions.py  test_registry.py  test_resilience.py  test_rss.py  test_rss_resilience.py
