[tool.poetry]
name = "daily-intelligence-report"
version = "0.1.0"
description = "Personalized daily intelligence report system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
torch = "^2.5.0"
httpx = "^0.27.0"
tenacity = "^8.2.3"
feedparser = "^6.0.10"
sqlite-utils = "^3.35.1"
scikit-learn = "^1.4.0"
jinja2 = "^3.1.3"
pydantic = "^2.6.1"
pyyaml = "^6.0.1"
sentence-transformers = "^2.3.1"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
ruff = "^0.2.1"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=src --cov-report=term-missing"